--- a/app/scss/blocks/trends.scss
+++ b/app/scss/blocks/trends.scss
@@ -61,6 +61,7 @@
   }
   &__nav-wrapper{
     max-height: 200px;
+    position: static !important;
   }
   &__nav-wrapper{
     max-height: 240px;
